--- a/html/assets/css/search/choices.css
+++ b/html/assets/css/search/choices.css
@@ -45,7 +45,6 @@
 .choices[data-type*="select-one"].is-open:after {
   border-color: transparent transparent var(--tagColor) transparent !important;
   margin-top: -7.5px;
-  rotate: 180deg;
 }
 
 .choices__inner {
